--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".controller.covoitureur.InfoVoiture"></activity>
         <activity android:name=".controller.covoitureur.ConsulterCovoitureur" />
         <activity android:name=".controller.covoitureur.AnnonceCovoitureurForm" />
         <activity android:name=".controller.covoiture.ConsulterCovoiture" />
@@ -17,6 +18,7 @@
         <activity android:name=".controller.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
