--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".controller.covoitureur.ConsulterCovoitureur" />
-        <activity android:name=".controller.covoitureur.AnnonceCovoitureurForm" />
+        <activity android:name=".controller.covoitureur.ConsulterCovoitureur"></activity>
         <activity android:name=".controller.covoiture.ConsulterCovoiture" />
-        <activity android:name=".controller.covoiture.AnnonceCovoitureForm" />
         <activity android:name=".controller.ChooseAct" />
         <activity android:name=".controller.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
