--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
         <activity android:name=".controller.covoiture.ConsulterCovoiture" />
         <activity android:name=".controller.covoiture.AnnonceCovoitureForm" />
         <activity android:name=".controller.ChooseAct" />
+        <activity android:name=".controller.InscriptionActivity" />
+        <activity android:name=".controller.ResetPasswordActivity" />
+        <activity android:name=".controller.HomeApp" />
+        <activity android:name=".controller.ProfilActivity" />
         <activity android:name=".controller.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
